--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,3 +20,17 @@
 .App-link {
   color: #09d3ac;
 }
+
+.time-block-o {
+  width: 100%;
+  height: 100%;
+  background: orange;
+}
+
+.time-block-top {
+  border-radius: 30px 30px 0px 0px;
+}
+
+.time-block-bottom {
+  border-radius: 0px 0px 30px 30px;
+}
